--- a/Views/Account/Index.cshtml
+++ b/Views/Account/Index.cshtml
@@ -1,8 +1,12 @@
+
 @model vocabadmin.Models.AuthenticateRequest
 
 @{
     ViewBag.Title = "Login";
+    string API_SERVER = (ViewBag.API_SERVER) as string;
+    string LOGIN_URL = API_SERVER + "/api/user/autenticate";
 }
+
 <div class="row justify-content-md-center">
     <div class="col-md-4">
         <div class="card">
@@ -10,8 +14,8 @@
                 Login
             </div>
             <div class="card-body">
-                @using (Html.BeginForm("Login", "Account", FormMethod.Post))
-                {
+                    @using (Html.BeginForm())
+                    {
                     @Html.AntiForgeryToken()
                     <div class="form-group">
                         @Html.LabelFor(m => m.Username)
@@ -23,7 +27,7 @@
                         @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Password" })
                     </div>
                     <div class="form-group">
-                        <input type="submit" name="submit" class="btn btn-primary" value="Login"/>
+                        <button id="btnSubmit" class="btn btn-primary">Login</button>
                     </div>
                 }
             </div>
@@ -33,5 +37,28 @@
 
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{Html.RenderPartial("_ValidationScriptsPartial");}
+
+    <script>
+         $(document).ready(function () 
+         {
+            $('#btnSubmit').on('click', function () {
+                login();
+            });
+            
+        });
+            function login() {
+            $.ajax({
+                url: "https://localhost:5000/api/user/autenticate",
+                type: "POST",
+                dataType: "json",
+                success: function (result) {
+                    var mess = result["message"];
+                    alert(mess);
+                },
+                error: function (errormessage) {
+                    alert(errormessage.responseText);
+                }
+            }
+    </script>
 }
