--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <partial name="_Header"/>
+    @RenderSection("Header", required: true)
 
     <div class="container">
         <main role="main" class="pb-3">
