--- a/Views/Shared/_HeaderAdmin.cshtml
+++ b/Views/Shared/_HeaderAdmin.cshtml
@@ -16,7 +16,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Account"
-                        asp-action="Index">Login</a>
+                        asp-action="Index">Logout</a>
                     </li>
                 </ul>
             </div>
